# ffpp

./: .gitignore  LICENSE  README.md  setup.cfg
.github/workflows/: python-package.yml  python-publish.yml
example/: example.py
src/ffpp/: Discovery.py  Network.py  Printer.py  __init__.py
tests/: const_NetworkResponse.py  mock_NetworkClass.py  test_Network.py  test_Printer.py
