[metadata]
name = ffpp
version = 0.0.14
author = Josef Fällman
author_email = josef.fallman@gmail.com
description = A simple way to connect and interact with your 3D printer.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/joseffallman/ffpp
project_urls =
    Bug Tracker = https://github.com/joseffallman/ffpp/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
